# whey-comparator

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  eslint.config.js  fallback_catalogue.py  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/api/: .env.example  .eslintrc.js  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_core_tables.py  0002_add_price_history_and_alerts.py  0003_update_price_history_defaults.py
apps/api/app/: celery_app.py  config.py  database.py  email.py  main.py  models.py  scheduler.py  schemas.py  tasks.py
apps/api/app/routers/: __init__.py  offers.py  price_alerts.py  prices.py  products.py  suppliers.py
apps/api/tests/: conftest.py  test_offers.py  test_price_alerts.py  test_products.py
data/: gyms_fallback.json  local_cache.json  programmes.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_REPORT.md  BACKEND.md  FRONTEND.md  PRODUCT_COMPARE_FLOW.md  SETUP.md  api_endpoints.md  architecture.md  build-report.md  design_guidelines.md  features.md  next_steps.md  recommandations-ameliorees.md
frontend/: .env.example  .eslintrc.js  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/lib/: gymLocator.js
services/: gyms_scraper.py  local_cache.py  product_compare.py
src/: App.tsx  env.d.ts  index.css  main.tsx
src/lib/: api.ts  (+2 more)
(+159 files in other folders)
