[tool.poetry]
name = "whey-api"
version = "0.1.0"
description = "Backend API for the whey comparator project"
authors = ["Whey Comparator Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = { version = "^3.1.18", extras = ["binary"] }
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
celery = "^5.3.6"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
